Working on 600px responsive

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
              <hr class="line">
 
-            <img class="bioPic" src="../Bootstrap-Portfolio/BioImage.jpg" height=200px width=200px>
+            <img class="bioPic" src="./BioImage copy.jpg" height=200px width=200px>
         <br>
             <p>My name is Drew Pepin, I'm from Rochester New Hampshire, and I'm an amateur coder. I spent 3 years at UNH studying statistics, but never finished my degree. 
             I spent my whole life playing hockey and continue to play to this day, even though the dream of making the NHL is dead. During my free time I like spending time
