--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="./style.css">
         <title>Contact Info</title>
     </head>
@@ -19,7 +20,7 @@
         </header>
         <br>
         <br>
-            <div class="content">
+            <div class="content contact__Content">
                 <h2>Contact</h2>
                 <hr class="linetwo">
                 <div class="form">
