--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="./style.css">
         <title>About Me</title>
     </head>
@@ -17,7 +18,7 @@
                             </nav>
             </div>
         </header>
-        <div class="content clearFix">
+        <div class="content clearFix index__Content">
             <h2 class="AboutMe">About Me</h2>
 
              <hr class="line">
