--- a/portfolio.html
+++ b/portfolio.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link type="text/css" rel="stylesheet" href="./style.css">
         <title>Portfolio</title>
     </head>
@@ -17,10 +18,10 @@
                                 </nav>
             </div>
         </header>
-        <div class="content">
+        <div class="content portfolio__Content">
             <h2>Portfolio</h2>
             <hr class="linethree" >
-                <div>
+                <div class="topRow">
                     <div class="Hangman">
                         <div class="HangmanLink">
                             <a class="HangmanText" href="ComingSoon.html" target="_blank">Hangman</a>
@@ -34,7 +35,7 @@
                         </div>
                     </div>
                 </div>
-                <div>
+                <div class="secondRow">
                     <div class="TriviaGame">
                         <div class="TriviaLink">
                             <a class="TriviaText" href="ComingSoon.html" target="_blank">Trivia Game</a>
